---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: ??.??.2025
  Graphics:
    - Threshold and valve type are now always shown while valve is selected (similar to the mod Valves).
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 20.07.2025
  Graphics:
    - Added valve animations (snouz).
  Changes:
    - Limit valve pump speed in mod settings to the `max_fluid_flow` utility constant.
  Locale:
    - Fix missing locale for the setting to disable PyIndustry migration.
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 03.05.2025
  Changes:
    - Slowed down flying text showing valve type and threshold.
  Compatibility:
    - [PyIndustry] Added a setting to disable the automatic migration of PyIndustry valves.
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 08.12.2024
  Features:
    - Added startup setting for the valve's pump speed when it's open.
  Compatibility:
    - Recipe and required technology is now compatible with more mods (#4 by branan).
    - [PyIndustry] Valve recipe and required technology is now based on deprecated Py valves instead of pump (#4 branan).
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 28.11.2024
  Compatibility:
    - Added compatibility with Even Pickier Dollies.
  Bugfixes:
    - Fixed rare crash when quick-changing configuration using the key-bind.
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 22.11.2024
  Bugfixes:
    - Fixed crash when configurable valve is cloned.
    - Fixed that flipping valves did not update internal entities.