@@ -2,3 +2,4 @@ require("prototypes.valve")
 require("prototypes.hidden-tanks")
 require("prototypes.tiny-combinators")
 require("prototypes.inputs")
+require("prototypes.mod-data")
